# storage/api-docs/api-docs.json
@@ -64,6 +64,38 @@
                 }
             }
         },
+        "/api/user/{id}": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "get user",
+                "operationId": "430618624b90f3b94e90e86921470fdd",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "user id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/path": {
             "get": {
                 "operationId": "f8672c2562b04fa0ad13dedd825d61c7",
